--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -1,8 +1,8 @@
 .top-bar-container{
     height: 64px;
-    border: 0;
-    padding: 0;
-    margin: 0;
+    // border: 0;
+    // padding: 0;
+    // margin: 0;
     background-color: $bgcmain;
     grid-area: "app-header";
     grid-column: 2 / -1;
@@ -12,26 +12,24 @@
 .app-header {
     display: flex;
     position: fixed;
-    gap: 16px;
+    // gap: 16px;
     height: 64px;
-    padding-inline-end: 16px;
+    // padding-inline-end: 16px;
     width: 100%;
     
 }
 
 .go-btn{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
     border-radius: 50%;
-    opacity: 90%;
+    opacity: 80%;
+    background-color: $bgcmain;
+    margin-left:12px;
+    margin-top: 11px;
 }
 
 button svg{
-    margin-top: 10px;
-    height: 20px;
-    width: 20px;
+    height: 17px;
+    width: 17px;
     fill: white;
 }
 
@@ -68,10 +66,8 @@ svg.search-key{
     // font-family: ; need new one
 }
 
-.btn-icon{
-    height: 32px;
-    width: 32px;
-    // display: inline;
-    background-color: $bgcmain;
-
-}
+// .btn-icon{
+//     height: 32px;
+//     width: 32px;
+//     background-color: $bgcmain;
+// }
