--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -1,9 +1,10 @@
 .side-navbar {
-    height: 100%;
+    height: 100vh;
     background-color: $bgcnav;
-    width: 220px;
+    width: 235px;
     grid-area: "navbar";
     grid-row: 1 / -1;
+    margin-top: 12px;
 }
 
 ul {
@@ -15,7 +16,7 @@ ul {
 }
 
 span {
-    font-size: 15px;
+    font-size: 1em;
 }
 
 svg {
@@ -28,6 +29,10 @@ svg {
     cursor: pointer;
 }
 
+.last{
+    // padding-top: 2.1em;
+}
+
 .nav-link {
     text-transform: none;
     display: block;
@@ -37,18 +42,16 @@ svg {
     align-items: center;
 
     &-logo {
-        margin-top: 20px;
         span {
-            display: inline-block;
-            font-size: 30px;
-            margin-bottom: 15px;
+            // float:right;
+            font-size: 23px;
             color: $txtselected;
         }
 
         .logo-img {
             display: inline-block;
-            height: 35px;
-            width: 35px;
+            height: 38px;
+            width: 38px;
             border-radius: 50%;
             object-fit: cover;
             aspect-ratio: 1/1;
