--- a/frontend/src/assets/styles/cmps/_app-station.scss
+++ b/frontend/src/assets/styles/cmps/_app-station.scss
@@ -1,21 +1,21 @@
 .home-stations-container {
 
     .first-station-cards {
-        padding: 5px;
-        margin: auto;
+        padding: 13px 0px 30px 15px;
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(2, minmax(240px, 1fr));
-        grid-gap: 10px;
+        grid-template-columns: repeat(3, minmax(240px, 1fr));
+        grid-gap: 16px;
     }
+    
 
     .first-station-card {
-        height: 64px;
+        height: 80px;
+        width: 340px;
         cursor: pointer;
         display: flex;
         align-items: center;
         text-align: center;
-        margin: 0;
         border-radius: 5px;
         border: 0;
         background-color: $bgcplaylistup;
@@ -28,9 +28,9 @@
 
     .song-img {
         margin-right: 15px;
-        width: 64px;
-        height: 64px;
-        border-radius: 5px;
+        width: 80px;
+        height: 80px;
+        border-radius: 5% 0% 5% 0%;
         object-fit: cover;
         aspect-ratio: 1/1;
     }
