--- a/frontend/src/assets/styles/setup/_typography.scss
+++ b/frontend/src/assets/styles/setup/_typography.scss
@@ -8,3 +8,4 @@
 // }
 // @import '../../fonts/Montserrat/static/Montserrat-SemiBold.ttf'
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
