--- a/frontend/src/assets/styles/cmps/_app-station.scss
+++ b/frontend/src/assets/styles/cmps/_app-station.scss
@@ -20,6 +20,8 @@
         border: 0;
         background-color: $bgcplaylistup;
 
+        overflow: hidden;
+
         &hover{
             background-color: ligthen($bgcplaylistup,20%);
         }
@@ -30,7 +32,7 @@
         margin-right: 15px;
         width: 64px;
         height: 64px;
-        border-radius: 5px;
+        // border-radius: 5px;
         object-fit: cover;
         aspect-ratio: 1/1;
     }
