--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -7,7 +7,8 @@
 }
 
 ::-webkit-scrollbar-track {
-    background: rgba(190, 47, 47, 0)
+    // background: rgba(190, 47, 47, 0);
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -38,7 +39,7 @@ body {
     margin: 0;
     font-size: rem(14px);
     font-family: $txtf;
-    margin: auto;
+    // margin: auto;
     background-color: $bgcmain;
 }
 
