--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -2,21 +2,27 @@
     height: 100%;
     background-color: $bgcnav;
     width: 235px;
-    grid-area: "navbar";
+    grid-area: navbar;
     grid-row: 1 / -1;
+    font-weight: bold;
 }
 
 ul {
     list-style-type: none;
+    
+    a{
+        display: flex;
+        align-items: center;
+        color: $txtfill;
+        &:hover{
+            color: $txtselected;
+        }
+    }
 
     &.nav-bar {
         padding-left: 25px;
-        padding-top: 0.64em;
+        padding-top: 0.75em;
     }
-}
-
-span {
-    font-size: 1em;
 }
 
 svg {
@@ -25,32 +31,29 @@ svg {
 
 .fa-solid {
     color: $txtselected;
-    font-size: 26px;
+    font-size: 27px;
     cursor: pointer;
 }
 
 .create{
-    margin-top: 1.7em;
+    margin-top: 1.6em;
 }
 
 .like{
     margin-top: 0.15em;
     .like-box{
         display: inline-block;
-        height: 1.6em;
-        width: 1.6em;
-        background-image: linear-gradient(rgb(145, 20, 177), white);
-        
-        svg{
-            margin-left: 5px;
-            margin-top: 5px;
-            
-        }
+        height: 1.7em;
+        width: 1.7em;
+        background-image: linear-gradient(rgb(101, 20, 177), white);
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 
 .nav-link {
-    padding-top: 2.3em;
+    padding-top: 2.4em;
     text-transform: none;
     display: block;
     height: 2.86em;
@@ -59,19 +62,16 @@ svg {
     align-items: center;
 
     &-logo {
-        span {
-            font-size: 24px;
-            color: $txtfill;
-        }
+        font-size: 25px;
 
         .logo-img {
-            vertical-align: middle;
-            // display: inline-block;
+            // vertical-align: middle;
             height: 38px;
             width: 38px;
             border-radius: 50%;
             object-fit: cover;
             aspect-ratio: 1/1;
+            margin-right: 5px;
         }
     }
 }
@@ -87,7 +87,6 @@ span {
 }
 
 .icon {
-    width: 15px;
-    height: 15px;
-    margin-right: 7px;
+    margin-right: 15px;
+    
 }
