--- a/frontend/src/assets/styles/cmps/_app-station.scss
+++ b/frontend/src/assets/styles/cmps/_app-station.scss
@@ -1,14 +1,13 @@
 .home-stations-container {
 
     .first-station-cards {
-        // padding: 13px 0px 30px 15px;
         padding: 11px 14px;
         width: 100%;
         display: grid;
         grid-template-columns: repeat(3, minmax(240px, 1fr));
-        grid-gap: 16px 70px;
+        grid-gap: 16px 86px;
     }
-    
+
 
     .first-station-card {
         height: 80px;
@@ -17,18 +16,17 @@
         display: flex;
         align-items: center;
         text-align: center;
-        border-radius: 5px;
+        border-radius: 4px;
         border: 0;
         background-color: $bgcplaylistup;
+        // overflow: hidden;
 
-        overflow: hidden;
-
-        &:hover{
-            background-color: ligthen($bgcplaylistup,20%);
+        &:hover {
+            background-color: ligthen($bgcplaylistup, 20%);
         }
 
     }
-
+    
     .song-img {
         margin-right: 15px;
         width: 80px;
@@ -39,18 +37,20 @@
     }
 
     h3 {
-
+        margin-top: 10px;
         display: inline-block;
         line-height: 10px;
     }
 
     .second-station-container {
-        margin-top: 40px;
+        margin-top: 30px;
+        margin-left: 14px;
     }
 
     h2 {
         display: inline-block;
         color: $txtselected;
+        font-size: 24px;
         margin-bottom: 16px;
     }
 
