--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -45,7 +45,7 @@ svg {
         display: inline-block;
         height: 1.7em;
         width: 1.7em;
-        background-image: linear-gradient(rgb(101, 20, 177), white);
+        background-image: linear-gradient(rgb(101, 20, 177), rgb(214, 213, 213));
         display: flex;
         align-items: center;
         justify-content: center;
