--- a/frontend/src/assets/styles/views/_home-page.scss
+++ b/frontend/src/assets/styles/views/_home-page.scss
@@ -1,5 +1,7 @@
 .main-app-container {
+    // grid-area: main;
     grid-area: 1/2/3/-1;
+    // grid-template-rows: 1/2/3/-1;
     height: calc(100vh - 89px);
     background-color: $bgcmain;
     color: $txtfill;
