--- a/frontend/src/assets/styles/cmps/_app-search.scss
+++ b/frontend/src/assets/styles/cmps/_app-search.scss
@@ -1,11 +1,11 @@
 .main-search-container {
-    margin-top: 65px;
-    padding-left: 32px;
-    padding-right: 20px;
+    margin-top: rem(65px);
+    padding-left: rem(32px);
+    padding-right: rem(20px);
     display: grid;
 
     h2 {
-        margin-bottom: 30px;
+        margin-bottom: rem(30px);
         overflow-wrap: break-word;
         word-break: break-word;
         color: #fff;
@@ -15,13 +15,13 @@
         // height: 100vh;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(157px, 1fr));
-        gap: 24px;
+        gap: rem(24px);
 
         .filter-card {
             position: relative;
             aspect-ratio: 1 / 1;
             background-color: rgb(66, 62, 62);
-            border-radius: 8px;
+            border-radius: rem(8px);
             border: none;
             display: grid;
             overflow: hidden;
@@ -37,10 +37,10 @@
 
 
         h2 {
-            margin-top: 8px;
+            margin-top: rem(8px);
             font-weight: 700;
             grid-area: 1 / 1 / 2 / 2;
-            padding: 16px;
+            padding: rem(16px);
         }
 
         .filter-img {
@@ -48,7 +48,7 @@
             grid-area: 1 / 1 / 2 / 2;
             position: absolute;
             rotate: z 25deg;
-            width: 100px;
+            width: rem(100px);
             left: 47%;
             bottom: -3%;
         }
