--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -9,7 +9,8 @@
     grid-template-rows: auto 1fr auto;
     // padding: 0;
     max-width: 100%;
-    overflow-y: auto; 
+    overflow-y: hidden; 
+    // overflow-y: auto; 
     
     > * {
         // grid-column: 2;
