--- a/frontend/src/assets/styles/cmps/_station-details.scss
+++ b/frontend/src/assets/styles/cmps/_station-details.scss
@@ -13,8 +13,8 @@
 .top-container{
     display: flex;
     .img-container {
-        width: 230px;
-        height: 230px;
+        width: rem(230px);
+        height: rem(230px);
         box-shadow: rgba(0, 0, 0, 0.5) 0px 4px 60px 0px;
         display: flex;
         margin: 5vw;
@@ -29,7 +29,7 @@
         color: $txtselected;
        
         h2 {
-            font-size: 10px;
+            font-size: rem(10px);
         }
 
         h1 {
@@ -37,7 +37,7 @@
         }
 
         p {
-            font-size: 16px;
+            font-size: rem(16px);
         }
     } 
 }
@@ -46,8 +46,8 @@
     display: flex;
     .btn-play{
         display: flex;
-        height: 50px;
-        width: 50px;
+        height: rem(50px);
+        width: rem(50px);
         background-color: transparent;
         background-color: $bgcplay;
         align-items: center;
