improve station details

--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -25,6 +25,11 @@
     margin-top: rem(12px);
 }
 
+.btn-delete-station{
+    color: white;
+    background-color: transparent;
+}
+
 button svg {
     height: 1.21em;
     width: 1.21em;
