--- a/frontend/src/assets/styles/cmps/_app-player.scss
+++ b/frontend/src/assets/styles/cmps/_app-player.scss
@@ -17,6 +17,10 @@
     // background-color: rgb(164, 53, 72);
     // justify-content: flex-start;
     align-items: center;
+
+    & .song-img{
+        border: 0px;
+    }
 }
 
 .song-img {
