--- a/frontend/src/assets/styles/cmps/_song-list.scss
+++ b/frontend/src/assets/styles/cmps/_song-list.scss
@@ -1,5 +1,6 @@
 .song-list-container {
     background-color: black;
+    margin-top: 10px;
 
     &.header-song-list {
         // grid-template-columns: 3fr 20fr 5fr 5fr 7.5fr;
