--- a/frontend/src/assets/styles/cmps/_station-details.scss
+++ b/frontend/src/assets/styles/cmps/_station-details.scss
@@ -7,7 +7,7 @@
     margin: 0;
     padding: 0;
     vertical-align: baseline;
-    background-image: linear-gradient(red, black);
+    background-image: linear-gradient(rgb(26, 26, 172), black);
 }
 
 .top-container{
