--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -5,7 +5,7 @@
     "navbar app-header"
     "navbar main"
     "player player";
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: auto 1fr auto;
     // padding: 0;
     max-width: 100%;
