search cmp style and logic improved

--- a/frontend/src/assets/styles/cmps/_app-search.scss
+++ b/frontend/src/assets/styles/cmps/_app-search.scss
@@ -3,6 +3,7 @@
     padding-left: rem(32px);
     padding-right: rem(16px);
     display: grid;
+    grid-area: main;
 
     h2 {
         margin-bottom: rem(30px);
