--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -1,19 +1,21 @@
 .main-layout {
     height: 100vh;
     display: grid;
+    padding-left: 0;
+    margin: 0;
     grid-template-areas:
     "navbar app-header"
     "navbar main"
     "player player";
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: auto 1fr auto;
-    // padding: 0;
+    grid-template-columns: 247px minmax(300px, 1fr);
+    // grid-template-columns: 1fr 4fr;
+    grid-template-rows: rem(64px) 1fr auto;
+    // grid-template-rows: auto 1fr auto;
     max-width: 100%;
     overflow-y: hidden; 
-    // overflow-y: auto; 
     
     > * {
-        // grid-column: 2;
+        grid-column: 2;
 
         &.full {
             grid-column: 1 /-1;
