--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -5,16 +5,20 @@
     grid-area: navbar;
     grid-row: 1 / -1;
     font-weight: bold;
+    display: flex;
+    grid-area: 1/1/3/2;
+    flex-direction: column;
 }
 
 ul {
     list-style-type: none;
-    
-    a{
+
+    a {
         display: flex;
         align-items: center;
         color: $txtfill;
-        &:hover{
+
+        &:hover {
             color: $txtselected;
         }
     }
@@ -23,6 +27,14 @@ ul {
         padding-left: rem(25px);
         padding-top: 0.75em;
     }
+}
+
+.nav-list-seperator {
+    margin-bottom: 1em;
+
+    width: 85%;
+    margin: auto;
+    border-bottom: 0.1px solid rgb(78, 74, 74)
 }
 
 svg {
@@ -35,13 +47,15 @@ svg {
     cursor: pointer;
 }
 
-.create{
+.create {
     margin-top: 1.6em;
 }
 
-.like{
+.like {
     margin-top: 0.15em;
-    .like-box{
+    margin-bottom: 1.5em;
+
+    .like-box {
         display: inline-block;
         height: 1.7em;
         width: 1.7em;
@@ -84,8 +98,21 @@ span {
         transition: 0.7s;
         color: $txtselected;
     }
+
+    &active {
+        color: $txtselected;
+    }
 }
 
 .icon {
     margin-right: rem(15px);
+}
+
+.user-station-list {
+    padding-left: rem(25px);
+
+    // &:hover {
+    //     fill: $txtselected;
+    //     transition: fill 0.7s;
+    // }
 }
