--- a/frontend/src/assets/styles/cmps/_song-list.scss
+++ b/frontend/src/assets/styles/cmps/_song-list.scss
@@ -4,7 +4,7 @@
 
     &.header-song-list {
         // grid-template-columns: 3fr 20fr 5fr 5fr 7.5fr;
-        grid-template-columns:3fr 20fr 5fr 5fr 1fr 5.5fr 1fr;
+        grid-template-columns: 3fr 20fr 5fr 5fr 1fr 5.5fr 1fr;
     }
 
     & ul {
@@ -22,24 +22,31 @@
         background-color: transparent;
         color: white;
         font-size: 20px;
-        color:white; 
+        color: white;
         width: 50px;
         height: 50px;
         align-items: center;
+
         &:hover {
             font-weight: bold;
             font-size: 25px;
         }
+
+
     }
 }
 
+.song-liked-svg {
+    fill: $bgcplay;
+}
+
 .header-song-list {
-    grid-template-columns:3fr 20fr 5fr 5fr 1fr 5.5fr 1fr;
+    grid-template-columns: 3fr 20fr 5fr 5fr 1fr 5.5fr 1fr;
 }
 
 .song-list-li {
-    grid-template-columns:3fr 20fr 5fr 5fr 1fr 5.5fr 1fr;
-    
+    grid-template-columns: 3fr 20fr 5fr 5fr 1fr 5.5fr 1fr;
+
 
     // &:hover {}
 }
