--- a/frontend/src/assets/styles/setup/_variables.scss
+++ b/frontend/src/assets/styles/setup/_variables.scss
@@ -17,7 +17,7 @@ $bgcplay: #1ed760;
 $bgcplaylistup: #b3b3b340;
 
 //playlist-grid
-$bgcplaylistdown: #282828;
+$bgcplaylistdown: #28282850;
 
 //footer-player
 $bgcplayer: #181818;
