--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -21,10 +21,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top: 18px;
+    margin-left: 33px;
     
     .go-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding-top: 2px;
         box-sizing: unset;
         background-color: transparent;
@@ -45,7 +48,8 @@ button svg {
 
 svg.search-key {
     fill: black;
-    margin-top: 0;
+    margin-top: 5px;
+    // margin-left: 12px;
 }
 
 .searchInput-container {
@@ -56,7 +60,8 @@ svg.search-key {
     justify-content: flex-start;
     flex-direction: row;
     border-radius: rem(20px);
-    margin-top: rem(9px);
+    margin-top: rem(12px);
+    margin-left: 65px;
 }
 
 .search-key-icon {
@@ -67,6 +72,7 @@ svg.search-key {
     background-color: transparent;
     color: black;
     font-size: rem(20px);
+    margin-left: 12px;
 }
 
 .search-key-input {
@@ -74,4 +80,5 @@ svg.search-key {
     width: rem(250px);
     background-color: transparent;
     border: 0px solid;
+    margin-left: 12px;
 }
