--- a/frontend/src/assets/styles/cmps/_station-details.scss
+++ b/frontend/src/assets/styles/cmps/_station-details.scss
@@ -1,11 +1,10 @@
 .station-details {
-    display: grid;
-    grid-template-columns: 2;
+    // display: grid;
+    // grid-template-columns: 2;
     height: 100%;
     width: 100%;
     border: 0;
-    margin: 0;
-    padding: 0;
+    padding-top: 17px;
     vertical-align: baseline;
     background-image: linear-gradient(rgb(26, 26, 172), black);
 }
@@ -16,8 +15,8 @@
         width: rem(230px);
         height: rem(230px);
         box-shadow: rgba(0, 0, 0, 0.5) 0px 4px 60px 0px;
-        display: flex;
-        margin: 5vw;
+        margin-top: 69px;
+        margin-left: 34px;
         object-fit: cover;
         aspect-ratio: 1 / 1;
     }
@@ -27,17 +26,21 @@
         justify-content: center;
         align-items: flex-start;
         color: $txtselected;
+        margin-left: 24px;
+        margin-top: 100px;
        
         h2 {
-            font-size: rem(10px);
+            font-size: rem(12px);
         }
 
         h1 {
-            font-size: 4rem;
+            margin-top: 18px;
+            font-size: 6rem;
         }
 
         p {
-            font-size: rem(16px);
+            margin-top: 20px;
+            font-size: rem(12px);
         }
     } 
 }
@@ -46,26 +49,40 @@
     display: flex;
     .btn-play{
         display: flex;
-        height: rem(50px);
-        width: rem(50px);
+        height: rem(55px);
+        width: rem(55px);
         background-color: transparent;
         background-color: $bgcplay;
         align-items: center;
         justify-content: center;
         border-radius: 50%;
+        margin-top: 38px;
+        margin-left: 32px;
       
         svg{
             fill: black;
+            font-size: 25px;
         }
     }
 
     .btn-like{
         background-color: transparent;
+        margin-left: 34px;
+        margin-top: 45px;
+        font-size: 25px;
         
     }
     
     .btn-options{
         background-color: transparent;
+        margin-top: 45px;
+        margin-left: 25px;
+        font-size: 25px;
+    }
 
+    .btn-delete-station{
+        font-size: 25px;
+        margin-left: 25px;
+        margin-top: 45px;
     }
 }
