--- a/frontend/src/assets/styles/cmps/_app-create-station.scss
+++ b/frontend/src/assets/styles/cmps/_app-create-station.scss
@@ -12,4 +12,10 @@
         background-color: transparent;
         border: 1px solid white;
     }
+
+    & .search-song-img {
+        height: 65px;
+        width: fit-content;
+        margin-left: 36px;
+    }
 }
