styling and added data

--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -54,6 +54,7 @@
         padding-top: rem(7px);
         padding-left: rem(32px);
         padding-right: rem(16px);
+        margin-top: 101px;
         display: grid;
         grid-area: main;
     
